# fast-api-architecture

./: .coveragerc  pyproject.toml
app/adapter/inbound/api/: __init__.py  auth.py  auth_router.py  order.py  order_router.py  product.py  product_router.py
app/adapter/inbound/api/schemas/: order.py  product.py
app/adapter/outbound/persistence/: base.py  order.py  order_adapter.py  product_adapter.py  user.py  user_adapter.py
app/adapter/outbound/persistence/entity/: base.py  order.py  product.py  user.py
app/application/port/input/: __init__.py  auth_usecase.py  order_usecase.py  product_usecase.py
app/application/port/output/: __init__.py  order_repository.py  product_repository.py  user_repository.py
app/application/service/: auth.py  auth_service.py  order.py  order_service.py  product.py  product_service.py
app/common/: authentication.py
app/common/security/: credential.py  jwt.py
app/config/: application.py
app/domain/: order.py  product.py  user.py
tests/: conftest.py
tests/api/: test_api.py
tests/auth/: test_authentication.py
tests/service/: conftest.py  factory.py  test_auth_service.py  test_order_service.py  test_product_service.py
